ui: fixed a big where history items would overlap if one was multiple lines

--- a/assets/css/feynman.styl
+++ b/assets/css/feynman.styl
@@ -35,8 +35,7 @@ sidebarWidth = 210px
   text-align: center
   overflow: hidden
 
-  padding: 20px
-  padding-top: 0
+  padding: 0 20px
 
   -webkit-box-shadow: 1px 0px 1px 0px rgba(214,214,214,1);
   -moz-box-shadow: 1px 0px 1px 0px rgba(214,214,214,1);
@@ -154,6 +153,8 @@ circle.selectedElement
   vertical-align: top
   cursor: pointer
   text-align: left
+  display: inline-block
+  width: 100%
 
   .id
     width: 10%
